--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 3.3.9
 repository: https://github.com/gameticharles/advance_math
 
 environment:
-  sdk: ^3.0.3
+  sdk: ">=3.5.4"
 
 documentation: "https://github.com/gameticharles/advance_math"
 
